{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 1051,
  "lineage": "44727374-417b-23fa-cbb3-908554cf420c",
  "resources": [
    {
      "module": "module.jhc_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:security-group/sg-0e964c18faa91f92f",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e964c18faa91f92f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "some description",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04071216160d87b1f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow traffic for RDS",
            "name_prefix": "",
            "owner_id": "879960988225",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_security_rules"
            },
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777",
              "Name": "rds_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.webapp.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083ef72694a2c1f4f",
            "arn": "arn:aws:ec2:us-east-2:879960988225:instance/i-005f10b8eb67459d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005f10b8eb67459d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ae4b4406c846360",
            "private_dns": "ip-10-20-0-45.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.45",
            "public_ip": "3.22.27.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0de63750e91bed191",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c2c9f0d3a3d0fdb",
            "tags": {
              "Name": "NAT_Instance"
            },
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777",
              "Name": "NAT_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0989aed7a298c6c88"
            ]
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:internet-gateway/igw-07e8b714d7fcf947e",
            "id": "igw-07e8b714d7fcf947e",
            "owner_id": "879960988225",
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e5ada6e5c393220a1080289494",
            "instance_id": "i-005f10b8eb67459d2",
            "instance_owner_id": "879960988225",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-08ae4b4406c846360",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e5ada6e5c393220a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_instance.nat_instance",
            "module.jhc_vpc.aws_route_table.private",
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:route-table/rtb-0e5ada6e5c393220a",
            "id": "rtb-0e5ada6e5c393220a",
            "owner_id": "879960988225",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:route-table/rtb-0cba7018ae5fff14d",
            "id": "rtb-0cba7018ae5fff14d",
            "owner_id": "879960988225",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e8b714d7fcf947e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_internet_gateway.main",
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a77d81c01baa3e90",
            "route_table_id": "rtb-0e5ada6e5c393220a",
            "subnet_id": "subnet-07a91df19dd0dd7d0"
          },
          "dependencies": [
            "module.jhc_vpc.aws_route_table.private",
            "module.jhc_vpc.aws_subnet.private",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeefa67641e5325a",
            "route_table_id": "rtb-0e5ada6e5c393220a",
            "subnet_id": "subnet-012fc9921668bdada"
          },
          "dependencies": [
            "module.jhc_vpc.aws_route_table.private",
            "module.jhc_vpc.aws_subnet.private",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e736d88bc99fadd",
            "route_table_id": "rtb-0e5ada6e5c393220a",
            "subnet_id": "subnet-08e5a106a450aeccb"
          },
          "dependencies": [
            "module.jhc_vpc.aws_route_table.private",
            "module.jhc_vpc.aws_subnet.private",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2c87a99982556fb",
            "route_table_id": "rtb-0cba7018ae5fff14d",
            "subnet_id": "subnet-06c2c9f0d3a3d0fdb"
          },
          "dependencies": [
            "module.jhc_vpc.aws_internet_gateway.main",
            "module.jhc_vpc.aws_route_table.public",
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0273a9778f213296f",
            "route_table_id": "rtb-0cba7018ae5fff14d",
            "subnet_id": "subnet-07f2ceb9265a6dd1e"
          },
          "dependencies": [
            "module.jhc_vpc.aws_internet_gateway.main",
            "module.jhc_vpc.aws_route_table.public",
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03976106ec072c215",
            "route_table_id": "rtb-0cba7018ae5fff14d",
            "subnet_id": "subnet-04b4dcf62d846e45d"
          },
          "dependencies": [
            "module.jhc_vpc.aws_internet_gateway.main",
            "module.jhc_vpc.aws_route_table.public",
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:subnet/subnet-07a91df19dd0dd7d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a91df19dd0dd7d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879960988225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:subnet/subnet-012fc9921668bdada",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012fc9921668bdada",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879960988225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:subnet/subnet-08e5a106a450aeccb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e5a106a450aeccb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879960988225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:subnet/subnet-06c2c9f0d3a3d0fdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c2c9f0d3a3d0fdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "879960988225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:subnet/subnet-07f2ceb9265a6dd1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f2ceb9265a6dd1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "879960988225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:subnet/subnet-04b4dcf62d846e45d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b4dcf62d846e45d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "879960988225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:vpc/vpc-0d014d7635d01c8c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0bcef641cd4c9c793",
            "default_route_table_id": "rtb-065ab551cb342c7f6",
            "default_security_group_id": "sg-0989aed7a298c6c88",
            "dhcp_options_id": "dopt-097852c8c39214ee1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d014d7635d01c8c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-065ab551cb342c7f6",
            "owner_id": "879960988225",
            "tags": {
              "Name": "jhc-app"
            },
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777",
              "Name": "jhc-app"
            }
          }
        }
      ]
    },
    {
      "module": "module.myappalb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:879960988225:loadbalancer/app/myapp-alb/90c1153ee1708049",
            "arn_suffix": "app/myapp-alb/90c1153ee1708049",
            "desync_mitigation_mode": "defensive",
            "dns_name": "myapp-alb-1166797292.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:879960988225:loadbalancer/app/myapp-alb/90c1153ee1708049",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bc76985d2d04e3cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b4dcf62d846e45d"
              },
              {
                "subnet_id": "subnet-06c2c9f0d3a3d0fdb"
              },
              {
                "subnet_id": "subnet-07f2ceb9265a6dd1e"
              }
            ],
            "subnets": [
              "subnet-04b4dcf62d846e45d",
              "subnet-06c2c9f0d3a3d0fdb",
              "subnet-07f2ceb9265a6dd1e"
            ],
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "vpc_id": "vpc-0d014d7635d01c8c6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.myappalb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.myappalb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:879960988225:listener/app/myapp-alb/90c1153ee1708049/b1460a8e5c61f8db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:879960988225:targetgroup/myapp-tg/4c82bf7a6f149bce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:879960988225:listener/app/myapp-alb/90c1153ee1708049/b1460a8e5c61f8db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:879960988225:loadbalancer/app/myapp-alb/90c1153ee1708049",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.myappalb.aws_lb.my_alb",
            "module.myappalb.aws_lb_target_group.main",
            "module.myappalb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.myappalb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:879960988225:targetgroup/myapp-tg/4c82bf7a6f149bce",
            "arn_suffix": "targetgroup/myapp-tg/4c82bf7a6f149bce",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:879960988225:targetgroup/myapp-tg/4c82bf7a6f149bce",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.myappalb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:879960988225:targetgroup/myapp-tg/4c82bf7a6f149bce-20230914043341431600000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:879960988225:targetgroup/myapp-tg/4c82bf7a6f149bce",
            "target_id": "i-08268ab2f51cbe6ff"
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.myappalb.aws_lb_target_group.main",
            "module.webapp.aws_iam_instance_profile.ec2_profile",
            "module.webapp.aws_iam_role.ec2_instance_role",
            "module.webapp.aws_instance.main",
            "module.webapp.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:879960988225:targetgroup/myapp-tg/4c82bf7a6f149bce-20230914043340820500000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:879960988225:targetgroup/myapp-tg/4c82bf7a6f149bce",
            "target_id": "i-0ea65f8e29e28163d"
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.myappalb.aws_lb_target_group.main",
            "module.webapp.aws_iam_instance_profile.ec2_profile",
            "module.webapp.aws_iam_role.ec2_instance_role",
            "module.webapp.aws_instance.main",
            "module.webapp.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.myappalb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:security-group/sg-0bc76985d2d04e3cd",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc76985d2d04e3cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "some description",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "879960988225",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_security_rules"
            },
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777",
              "Name": "web_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.webapp",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf0e376c672104d6",
            "arn": "arn:aws:ec2:us-east-2:879960988225:instance/i-08268ab2f51cbe6ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-08268ab2f51cbe6ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef4ec3b17a5c3d0b",
            "private_dns": "ip-10-20-0-190.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.190",
            "public_ip": "18.118.166.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0287f7a0ca495dd75",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c2c9f0d3a3d0fdb",
            "tags": {
              "Name": "ec2-demo-0"
            },
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777",
              "Name": "ec2-demo-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04071216160d87b1f"
            ]
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.webapp.aws_iam_instance_profile.ec2_profile",
            "module.webapp.aws_iam_role.ec2_instance_role",
            "module.webapp.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf0e376c672104d6",
            "arn": "arn:aws:ec2:us-east-2:879960988225:instance/i-0ea65f8e29e28163d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-0ea65f8e29e28163d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04256689c72280f33",
            "private_dns": "ip-10-20-1-202.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.202",
            "public_ip": "18.218.32.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d0aaea16e264f3b0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f2ceb9265a6dd1e",
            "tags": {
              "Name": "ec2-demo-1"
            },
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777",
              "Name": "ec2-demo-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04071216160d87b1f"
            ]
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.webapp.aws_iam_instance_profile.ec2_profile",
            "module.webapp.aws_iam_role.ec2_instance_role",
            "module.webapp.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.webapp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:879960988225:security-group/sg-04071216160d87b1f",
            "description": "allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04071216160d87b1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "some description",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "some description",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow traffic for web",
            "name_prefix": "",
            "owner_id": "879960988225",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_rules"
            },
            "tags_all": {
              "AppName": "hrautomation",
              "CostCenter": "jhc777",
              "Name": "ec2_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d014d7635d01c8c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}